# solr-token-sale

./: .gitignore  Anchor.toml  README-DAO-VC.md  README.md  package.json  start-test-validator.sh
js/: package-lock.json  package.json
js/cli/: token-sale-test.js
js/client/: pubkeys.js  token-sale.js
program/: .gitignore  Cargo.toml  idl.json
program/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs  vesting.rs
tests/: token-sale.ts  utils.ts
